--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.4",
     "lucide-react": "^0.564.0",
     "@google/genai": "^1.41.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
